--- a/.gitignore
+++ b/.gitignore
@@ -163,4 +163,6 @@ cython_debug/
 # End of https://www.toptal.com/developers/gitignore/api/python/
 
 .DS_STORE
-Archive/
+config.yaml
+LinkedIn-Scraper-Mailer.sh
+.virtual_documents
